--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emailjs/browser": "^3.11.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "dotenv": "^16.3.1",
+        "email-js": "^2.0.2",
+        "emailjs": "^4.0.2",
         "eslint": "^8.46.0",
         "prettier": "^3.0.1",
         "react": "^18.2.0",
